--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -15,20 +15,21 @@ concurrency:
   cancel-in-progress: true
 jobs:
   linter:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
-        - name: Install Python
-          uses: actions/setup-python@v4
-          with:
-            python-version: "3.11"
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install ruff
-        # Include `--format=github` to enable automatic inline annotations.
-        - name: Run Ruff
-          run: ruff check --format=github .
+    name: 🔎 Linter
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff
+      # Include `--format=github` to enable automatic inline annotations.
+      - name: Run Ruff
+        run: ruff check --format=github .
   buildcontainers:
     name: 🌎 Deploying to Triage env
     needs: [linter]
