adding assignee to pull request

--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -138,7 +138,7 @@ jobs:
         uses: repo-sync/pull-request@v2
         with:
           destination_branch: "master"
-          assignees: "two-trick-pony-NL"
+          pr_assignee: "two-trick-pony-NL"
           pr_title: "🤖 Merge and Deploy ${{ github.ref }}"
           pr_body: "Verify the code is working on triage.mapmaker.nl If you merge this pull-request the code will be deployed to production. Check out the changes here: https://github.com/${{ github.repository }}/commit/${{github.sha}}"
           pr_label: "automatic-pullrequest"
