--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -128,8 +128,9 @@ jobs:
           --containers file://Infrastructure/AWS/deploymentconfig.json \
           --public-endpoint file://Infrastructure/AWS/publicendpoint.json
 
+
   pull-request:
-    needs: [buildcontainers]
+    needs: [buildcontainers, linter]
     name: 🔃 Creating Pull request to merge with Master
     runs-on: ubuntu-latest
     steps:
