--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -1,4 +1,4 @@
-name: 🧪 Triage deployment
+name: 🦺 Triage deployment
 on:
   push:
     branches:
@@ -14,6 +14,8 @@ concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
   cancel-in-progress: true
 jobs:
+  test_django:
+    uses: your-username/your-repo/.github/workflows/django-test.yaml@main
   linter:
     name: 🔎 Linter
     runs-on: ubuntu-latest
