--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -14,8 +14,6 @@ concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
   cancel-in-progress: true
 jobs:
-  test_django:
-    uses: two-trick-pony-NL/mapmaker/.github/workflows/tests.yml@test
   linter:
     name: 🔎 Linter
     runs-on: ubuntu-latest
@@ -30,8 +28,26 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruff
       # Include `--format=github` to enable automatic inline annotations.
-      - name: Run Ruff
+      - name: 🧙🏻‍♀️ Run Ruff
         run: ruff check --format=github .
+
+  testsuite:
+    name: 🦺 Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip3 install -r Infrastructure/requirements.txt
+      - name: 🤷🏻‍♂️ Running tests
+        run: |
+          cd src
+          python3 manage.py test --noinput
   buildcontainers:
     name: 🌎 Deploying to Triage env
     needs: [linter]
