--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -44,6 +44,28 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip3 install -r Infrastructure/requirements.txt
+      - name: 🤐 Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER_GMAIL }}
+          envkey_EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD_GMAIL }}
+          envkey_DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          envkey_DB_USER: ${{ secrets.DATABASE_USER }}
+          envkey_DB_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          envkey_DB_HOST: ${{ secrets.DATABASE_HOST }}
+          envkey_DB_NAME: "mapmaker_dev"
+          envkey_HCTI_API_KEY: ${{ secrets.HCTI_API_KEY }}
+          envkey_HCTI_API_USER_ID: ${{ secrets.HCTI_API_USER_ID }}
+          envkey_MYSQL_ATTR_SSL_CA: ${{ secrets.MYSQL_ATTR_SSL_CA }}
+          envkey_SECURE_SETTINGS: True
+          envkey_DEBUG: True
+          envkey_MIXPANEL_TOKEN: ${{ secrets.MIXPANEL_TOKEN}}
+          envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
+          envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
+          envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
+          directory: src/core
+          file_name: .env
+          fail_on_empty: false
       - name: 🤷🏻‍♂️ Running tests
         run: |
           cd src
