--- a/Infrastructure/Docker/DockerfilePROD
+++ b/Infrastructure/Docker/DockerfilePROD
@@ -18,7 +18,7 @@ RUN pip3 install -r requirements.txt
 
 # Copy the content of the local src directory to the working directory
 COPY src .
-RUN python manage.py migrate --noinput
+#RUN python manage.py migrate --noinput
 
 
 # This is the "standard" local development server and thus should not be used in prod
