--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -97,7 +97,7 @@ jobs:
           envkey_HCTI_API_USER_ID: ${{ secrets.HCTI_API_USER_ID }}
           envkey_MYSQL_ATTR_SSL_CA: ${{ secrets.MYSQL_ATTR_SSL_CA }}
           envkey_SECURE_SETTINGS: True
-          envkey_DEBUG: True
+          envkey_DEBUG: False
           envkey_MIXPANEL_TOKEN: ${{ secrets.MIXPANEL_TOKEN}}
           envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
           envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
