--- a/Infrastructure/Docker/DockerfilePROD
+++ b/Infrastructure/Docker/DockerfilePROD
@@ -11,6 +11,15 @@ ENV PYTHONUNBUFFERED 1
 #EXPOSE 80
 EXPOSE 8000
 
+RUN apt-get update \
+    && apt-get -y install lsb-release \
+    && curl -sLo mysql.deb https://dev.mysql.com/get/mysql-apt-config_0.8.19-1_all.deb \
+    && DEBIAN_FRONTEND=noninteractive dpkg -i mysql.deb \
+    && rm mysql.deb \
+    && apt-get update \
+    && apt-get -y install libmysqlclient-dev \
+    && pip install mysqlclient==2.0.3
+
 # Copy the dependencies file to the working directory
 COPY Infrastructure/requirements.txt .
 RUN pip3 install --upgrade pip
@@ -27,9 +36,6 @@ COPY src .
 # be aware that the wsgi can't serve static files. NGINX handles this
 #CMD [ "gunicorn", "-b", "0.0.0.0:8000", "core.wsgi:application"]
 # Implementation with uWSGI server instead of GUNICORN using user uwsgi
-RUN adduser --system --group --no-create-home uwsgi
-USER uwsgi
 CMD [ "uwsgi", "--http", "0.0.0.0:8000", \
-            "--uid", "uwsgi", \
             "--protocol", "uwsgi", \
             "--wsgi", "core.wsgi:application" ]
