--- a/Infrastructure/Docker/DockerfilePROD
+++ b/Infrastructure/Docker/DockerfilePROD
@@ -27,6 +27,9 @@ COPY src .
 # be aware that the wsgi can't serve static files. NGINX handles this
 #CMD [ "gunicorn", "-b", "0.0.0.0:8000", "core.wsgi:application"]
 # Implementation with uWSGI server instead of GUNICORN using user uwsgi
+RUN adduser --system --group --no-create-home uwsgi
+USER uwsgi
 CMD [ "uwsgi", "--http", "0.0.0.0:8000", \
+            "--uid", "uwsgi", \
             "--protocol", "uwsgi", \
             "--wsgi", "core.wsgi:application" ]
