--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -171,7 +171,7 @@ jobs:
 
 
   pull-request:
-    needs: [buildcontainers, linter]
+    needs: [buildcontainers, linter, validatedeployment]
     name: 🔃 Creating Pull request to merge with Master
     runs-on: ubuntu-latest
     steps:
@@ -185,3 +185,44 @@ jobs:
           pr_body: "Verify the code is working on triage.mapmaker.nl If you merge this pull-request the code will be deployed to production. Check out the changes here: https://github.com/${{ github.repository }}/commit/${{github.sha}}"
           pr_label: "automatic-pullrequest"
           github_token: ${{ secrets.GH_TOKEN }}
+
+  validatedeployment:
+    name:  🎚 Switching to new container
+    runs-on: ubuntu-latest
+    continue-on-error: false
+    steps:
+      - name: 🗂  Getting config files from Github
+        uses: actions/checkout@v2
+      - name: 🏢 Install Amazon Client
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install || true
+          aws --version
+          curl "https://s3.us-west-2.amazonaws.com/lightsailctl/latest/linux-amd64/lightsailctl" -o "lightsailctl"
+          sudo mv "lightsailctl" "/usr/local/bin/lightsailctl"
+          sudo chmod +x /usr/local/bin/lightsailctl
+      - name: 🤐 Log in to AWS Lightsail with Secrets
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ${{ env.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: 🙋🏻‍♂️ Checking current version
+        run: aws lightsail get-container-service-deployments --service-name mapmaker --output json
+      - name: ⏱ Checking if the container went live
+        run: python Infrastructure/AWS/checkdeploymentsuccess.py
+      - name: =========== All done. Cleaning up ♻️  ===========
+        run: ls
+      - name: Build Alerts
+        if: ${{ failure() }}
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            🚨 Deployment failed 🚨
+            Build ${{ github.run_id }} failed
+
+            The server did not come online after deploying to AWS.
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
