--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -63,6 +63,8 @@ jobs:
           envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
           envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
           envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
+          envkey_ENVIRONMENT: triage
+
           directory: src/core
           file_name: .env
           fail_on_empty: false
@@ -101,6 +103,8 @@ jobs:
           envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
           envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
           envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
+          envkey_ENVIRONMENT: triage
+
           directory: src/core
           file_name: .env
           fail_on_empty: false
