--- a/.github/workflows/productiondeploy.yml
+++ b/.github/workflows/productiondeploy.yml
@@ -41,6 +41,7 @@ jobs:
           envkey_MYSQL_ATTR_SSL_CA: ${{ secrets.MYSQL_ATTR_SSL_CA }}
           envkey_SECURE_SETTINGS: True
           envkey_DEBUG: True
+          envkey_ENVIRONMENT: triage
           envkey_MIXPANEL_TOKEN: ${{ secrets.MIXPANEL_TOKEN}}
           envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
           envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
@@ -129,6 +130,8 @@ jobs:
             envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
             envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
             envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
+            envkey_ENVIRONMENT: production
+
             directory: src/core
             file_name: .env
             fail_on_empty: false
