adding in maintenance mode flag

--- a/.github/workflows/productiondeploy.yml
+++ b/.github/workflows/productiondeploy.yml
@@ -46,6 +46,8 @@ jobs:
           envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
           envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
           envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
+          envkey_MAINTENANCEMODE: False
+          envkey_MAINTENANCETEXT: Mapmaker might be unresponsive. Try again in a few minutes
           directory: src/core
           file_name: .env
           fail_on_empty: false
@@ -131,6 +133,8 @@ jobs:
             envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
             envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
             envkey_ENVIRONMENT: production
+            envkey_MAINTENANCEMODE: False
+            envkey_MAINTENANCETEXT: Mapmaker might be unresponsive. Try again in a few minutes
 
             directory: src/core
             file_name: .env
