--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -64,6 +64,8 @@ jobs:
           envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
           envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
           envkey_ENVIRONMENT: triage
+          envkey_MAINTENANCEMODE: False
+          envkey_MAINTENANCETEXT: Mapmaker might be unresponsive. Try again in a few minutes
 
           directory: src/core
           file_name: .env
@@ -104,6 +106,8 @@ jobs:
           envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
           envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
           envkey_ENVIRONMENT: triage
+          envkey_MAINTENANCEMODE: False
+          envkey_MAINTENANCETEXT: THIS IS TRIAGE Mapmaker might be unresponsive. Try again in a few minutes
 
           directory: src/core
           file_name: .env
