--- a/.github/workflows/djangosececuritycheck.yml
+++ b/.github/workflows/djangosececuritycheck.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           fetch-depth: 1
       - name: go to correct folder
-        run: cd/src
+        run: cd src
       - name: Scan Django settings for security issues
         id: check
         uses: victoriadrake/django-security-check@master
