--- a/.github/workflows/djangosececuritycheck.yml
+++ b/.github/workflows/djangosececuritycheck.yml
@@ -9,6 +9,7 @@ env:
   SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
   FAIL_LEVEL: CRITICAL
   ENV_TYPE: pipenv
+  APP_PATH: src/
 
 jobs:
   build:
@@ -20,8 +21,6 @@ jobs:
         uses: actions/checkout@master
         with:
           fetch-depth: 1
-      - name: go to correct folder
-        run: cd src
       - name: Scan Django settings for security issues
         id: check
         uses: victoriadrake/django-security-check@master
