--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -14,6 +14,10 @@ concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
   cancel-in-progress: true
 jobs:
+  done:
+    needs: [buildcontainers, validatedeployment]
+    name: 👍🏻
+    run: ls
   linter:
     name: 🔎 Linter
     runs-on: ubuntu-latest
