--- a/.github/workflows/Triagedeploy.yml
+++ b/.github/workflows/Triagedeploy.yml
@@ -188,7 +188,7 @@ jobs:
         with:
           destination_branch: "master"
           pr_assignee: "two-trick-pony-NL"
-          pr_title: "🤖 Merge and Deploy ${{ github.ref }}"
+          pr_title: "🤖 Merge and Deploy production ${{ github.ref }}"
           pr_body: "Verify the code is working on triage.mapmaker.nl If you merge this pull-request the code will be deployed to production. Check out the changes here: https://github.com/${{ github.repository }}/commit/${{github.sha}}"
           pr_label: "automatic-pullrequest"
           github_token: ${{ secrets.GH_TOKEN }}
