--- a/Infrastructure/AWS/deploymentconfig.json
+++ b/Infrastructure/AWS/deploymentconfig.json
@@ -9,5 +9,9 @@
   "mapmaker-nginx": {
     "image": ":mapmaker.nginx.latest",
     "ports": {"80": "HTTP"}
-  }
+  },
+  "redis-cache": {
+    "image": "redis/redis-stack:latest",
+    "ports": {"6379": "HTTP", "8001":"HTTP"}
+  },
   }
