--- a/.github/workflows/productiondeploy.yml
+++ b/.github/workflows/productiondeploy.yml
@@ -13,48 +13,7 @@ concurrency:
   group: 'deployment'
   cancel-in-progress: true
 jobs:
-  testsuite:
-    name: 🦺 Tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip3 install -r Infrastructure/requirements.txt
-      - name: 🤐 Make envfile
-        uses: SpicyPizza/create-envfile@v1.3
-        with:
-          envkey_EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER_GMAIL }}
-          envkey_EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD_GMAIL }}
-          envkey_DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-          envkey_DB_USER: ${{ secrets.DB_TRIAGE_USER }}
-          envkey_DB_PASSWORD: ${{ secrets.DB_TRIAGE_PASSWORD }}
-          envkey_DB_HOST: ${{ secrets.DB_TRIAGE_HOST }}
-          envkey_DB_NAME: ${{ secrets.DB_TRIAGE_NAME }}
-          envkey_HCTI_API_KEY: ${{ secrets.HCTI_API_KEY }}
-          envkey_HCTI_API_USER_ID: ${{ secrets.HCTI_API_USER_ID }}
-          envkey_MYSQL_ATTR_SSL_CA: ${{ secrets.MYSQL_ATTR_SSL_CA }}
-          envkey_SECURE_SETTINGS: True
-          envkey_DEBUG: True
-          envkey_ENVIRONMENT: triage
-          envkey_MIXPANEL_TOKEN: ${{ secrets.MIXPANEL_TOKEN}}
-          envkey_S3_AWS_STORAGE_BUCKET_NAME: ${{ secrets.S3_AWS_STORAGE_BUCKET_NAME}}
-          envkey_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY}}
-          envkey_S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY}}
-          envkey_MAINTENANCEMODE: True
-          envkey_MAINTENANCETEXT: Mapmaker might be unresponsive. Try again in a few minutes
-          directory: src/core
-          file_name: .env
-          fail_on_empty: false
-      - name: 🤷🏻‍♂️ Running tests
-        run: |
-          cd src
-          python3 manage.py test --noinput
+  
   linter:
     name: 🔎 Linter
     runs-on: ubuntu-latest
@@ -107,7 +66,7 @@ jobs:
 
   builddjango:
       name: 🏗️ Building Production Django Image
-      needs: [startnotification, linter, testsuite]
+      needs: [startnotification, linter]
       runs-on: ubuntu-latest
       steps:
         - name: 🗂  Getting code from Github
@@ -231,7 +190,7 @@ jobs:
 
   validatedeployment:
     name:  🙋🏻‍♂️ Check new version live
-    needs: [testsuite, linter]
+    needs: [linter]
     runs-on: ubuntu-latest
     continue-on-error: false
     steps:
